<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.example.socialandroid.ui.login.LoginViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_margin="50dp">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.username}"
                android:hint="@string/username"
                android:layout_marginBottom="@dimen/margin_login"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.email}"
                android:hint="@string/email"
                android:layout_marginBottom="@dimen/margin_login"
                android:visibility="@{model.isRegister ? View.GONE : View.VISIBLE}"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.password}"
                android:hint="@string/password"
                android:layout_marginBottom="@dimen/margin_login"/>
            <EditText
                android:id="@+id/password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={model.password_repeat}"
                android:hint="@string/password_repeat"
                android:layout_marginBottom="@dimen/margin_login"
                android:visibility="@{model.isRegister ? View.GONE : View.VISIBLE}"/>
            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_login"
                android:text="@{model.isRegister ? @string/login : @string/register}"/>
            <TextView
                android:id="@+id/is_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{model.isRegister?@string/account_do : @string/account_notdo }'/>
        </LinearLayout>

    </FrameLayout>
</layout>